--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grid_border_color">#000000</color>
+    <color name="grid_cell_color">#CCCCCC</color>
+    <color name="colorPrimary">#3f3f3f</color>
+    <color name="colorPrimaryDark">#2a2a2a</color>
+    <color name="colorAccent">#FF4081</color>
+    <color name="lightgrey">#939393</color>
+    <color name="unexplored">#888888</color>
+    <color name="path">#FFDAB9</color>
+    <color name="obstacle">#7F0000</color>
+    <color name="mazeborder">#000080</color>
+    <color name="offwhite">#F9F1f1</color>
 </resources>
